# backtest-as-a-service

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
backend/: Dockerfile  pom.xml
backend/data/h2/: backtest.lock.db
backend/src/main/resources/: application-postgres.properties  application.properties
backend/src/test/resources/: application.properties
data/csv/: AAPL.csv  AMZN.csv  BAC.csv  CVX.csv  DIS.csv  GOOGL.csv  GS.csv  JNJ.csv  JPM.csv  KO.csv  MA.csv  META.csv  MSFT.csv  NVDA.csv  PG.csv  QQQ.csv  SPY.csv  TSLA.csv  V.csv  WMT.csv  XOM.csv
docs/: api.md  architecture.md  decisions.md
engine/: CMakeLists.txt
engine/include/bt/: data_handler.hpp  date.hpp  engine.hpp  events.hpp  execution.hpp  indicators.hpp  metrics.hpp  portfolio.hpp  strategy.hpp
engine/src/: data_handler.cpp  engine.cpp  execution.cpp  main.cpp  metrics.cpp  portfolio.cpp  strategies.cpp
engine/tests/: test_engine.cpp  test_indicators.cpp  test_metrics.cpp  test_multi_symbol.cpp
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  format.test.ts  format.ts  index.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Layout.tsx  StatusBadge.test.tsx  StatusBadge.tsx
frontend/src/pages/: ComparePage.tsx  DashboardPage.tsx  LoginPage.tsx  NewBacktestPage.tsx  ResultsPage.tsx
frontend/src/test/: setup.ts
scripts/: dev-frontend.sh  fetch_data.py
(+36 files in other folders)
